%% Best-Fee P2P Status Transitions
%% Shows how P2P status progresses through the best-fee flow
%% and how 'found' prevents re-processing by CleanupService.

stateDiagram-v2
    [*] --> initial : P2P created

    initial --> queued : insertP2pRequest()
    queued --> sent : P2pMessageProcessor<br/>broadcasts to contacts

    state best_fee_fork <<choice>>
    sent --> best_fee_fork : RP2P response arrives

    best_fee_fork --> found : Fast mode<br/>handleRp2pRequest()
    best_fee_fork --> sent : Best-fee mode<br/>handleRp2pCandidate()<br/>(store candidate, stay in sent)

    sent --> found : Best-fee selection<br/>selectAndForwardBestRp2p()<br/>(all responded OR expiration)

    found --> completed : Transaction delivered<br/>along selected route

    sent --> expired : Expiration + no candidates<br/>(CleanupService)

    note right of found
        'found' status prevents
        getExpiredP2p() from
        re-processing this P2P
        on subsequent cleanup cycles
    end note

    note right of expired
        getExpiredP2p() excludes:
        completed, expired,
        cancelled, found
    end note
